# CIS5500

./: .gitignore  README.md  package-lock.json  package.json
Backend/: index.js  package-lock.json  package.json
Backend/__tests__/: api.spec.js  real-data.spec.js
DataClean/: .pdm-python  CleanCrimeIndex.py  CleanHotels.py  CleanOfferings.py  CleanPopulation.py  CleanReviews.py  Test.py  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: CityCard.jsx  HotelList.jsx  SafetyCard.jsx  SearchBar.jsx
frontend/src/pages/: CityOverview.jsx  Home.jsx  Hotels.jsx  Reviews.jsx  Safety.jsx
frontend/test/: App.test.jsx  CityOverview.test.jsx  Hotels.test.jsx  Reviews.test.jsx  Safety.test.jsx  components.test.jsx
frontend/test-results/: .last-run.json
src/pages/: Home.jsx
