[project]
name = "DataClean"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ryan", email = "ryhime1@gmail.com"},
]
dependencies = ["pandas>=2.3.3", "country-converter>=1.3.2"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
